Closed Bug 864046 Opened 12 years ago Closed 12 years ago

GC: Almost the last rooting fixes in XPConnect

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(2 files, 1 obsolete file)

Attached patch Proposed changesSplinter Review
Sorry for the quantity of review requests. We are nearing the end now. Here is a patch for reported hazards in: - XPCJSID.cpp - XPCJSRuntime.cpp - wrappers/FilteringWrapper.cpp - wrappers/WaiveXrayWrapper.cpp
Attachment #739997 - Flags: review?(bobbyholley+bmo)
Attached patch Proposed changes - part 2 (obsolete) — Splinter Review
Patch for reported hazards in XPConnect header files.
Attachment #739998 - Flags: review?(bobbyholley+bmo)
Comment on attachment 739998 [details] [diff] [review] Proposed changes - part 2 Review of attachment 739998 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/xpconnect/src/XPCQuickStubs.h @@ +676,5 @@ > Op *popp = static_cast<Op *>(JS_GetPrivate(ptrobj)); > > v = js::GetFunctionNativeReserved(callee, 1); > > + JS::RootedValue argval(cx, (argc > 0) ? args[0] : JSVAL_VOID); args.get(0) @@ +702,2 @@ > > JS::AutoObjectRooter tvr(cx, funobj); Rooting a Rooted?
Updated patch with Ms2ger's comments.
Attachment #739998 - Attachment is obsolete: true
Attachment #739998 - Flags: review?(bobbyholley+bmo)
Attachment #740217 - Flags: review?(bobbyholley+bmo)
Attachment #739997 - Flags: review?(bobbyholley+bmo) → review+
Attachment #740217 - Flags: review?(bobbyholley+bmo) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: