Bug 864046 - GC: Almost the last rooting fixes in XPConnect - part 1 r=bholley