js/xpconnect/src/XPCJSID.cpp
@@ -409,8 +409,8 @@ nsJSIID::NewResolve(nsIXPConnectWrappedNative *wrapper,
 
     XPCNativeMember* member = iface->FindMember(id);
     if (member && member->IsConstant()) {
-        jsval val;
-        if (!member->GetConstantValue(ccx, iface, &val))
+        RootedValue val(cx);
+        if (!member->GetConstantValue(ccx, iface, val.address()))
             return NS_ERROR_OUT_OF_MEMORY;
 
         *objp = obj;
@@ -886,7 +886,7 @@ nsJSCID::HasInstance(nsIXPConnectWrappedNative *wrapper,
 JSObject *
 xpc_NewIDObject(JSContext *cx, HandleObject jsobj, const nsID& aID)
 {
-    JSObject *obj = nullptr;
+    RootedObject obj(cx);
 
     nsCOMPtr<nsIJSID> iid =
             dont_AddRef(static_cast<nsIJSID*>(nsJSID::NewID(aID)));
@@ -899,7 +899,7 @@ xpc_NewIDObject(JSContext *cx, HandleObject jsobj, const nsID& aID)
                                           NS_GET_IID(nsIJSID),
                                           getter_AddRefs(holder));
             if (NS_SUCCEEDED(rv) && holder) {
-                holder->GetJSObject(&obj);
+                holder->GetJSObject(obj.address());
             }
         }
     }
