js/xpconnect/wrappers/FilteringWrapper.cpp
@@ -38,11 +38,12 @@ FilteringWrapper<Base, Policy>::isSafeToUnwrap()
 
 template <typename Policy>
 static bool
-Filter(JSContext *cx, JS::Handle<JSObject*> wrapper, AutoIdVector &props)
+Filter(JSContext *cx, HandleObject wrapper, AutoIdVector &props)
 {
     size_t w = 0;
+    RootedId id(cx);
     for (size_t n = 0; n < props.length(); ++n) {
-        jsid id = props[n];
+        id = props[n];
         if (Policy::check(cx, wrapper, id, Wrapper::GET))
             props[w++] = id;
         else if (JS_IsExceptionPending(cx))
@@ -67,8 +68,8 @@ FilterSetter(JSContext *cx, JSObject *wrapper, jsid id, js::PropertyDescriptor *
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::getPropertyDescriptor(JSContext *cx, JS::Handle<JSObject*> wrapper,
-                                                      JS::Handle<jsid> id,
+FilteringWrapper<Base, Policy>::getPropertyDescriptor(JSContext *cx, HandleObject wrapper,
+                                                      HandleId id,
                                                       js::PropertyDescriptor *desc, unsigned flags)
 {
     assertEnteredPolicy(cx, wrapper, id);
@@ -79,8 +80,8 @@ FilteringWrapper<Base, Policy>::getPropertyDescriptor(JSContext *cx, JS::Handle<
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::getOwnPropertyDescriptor(JSContext *cx, JS::Handle<JSObject*> wrapper,
-                                                         JS::Handle<jsid> id,
+FilteringWrapper<Base, Policy>::getOwnPropertyDescriptor(JSContext *cx, HandleObject wrapper,
+                                                         HandleId id,
                                                          js::PropertyDescriptor *desc,
                                                          unsigned flags)
 {
@@ -92,7 +93,7 @@ FilteringWrapper<Base, Policy>::getOwnPropertyDescriptor(JSContext *cx, JS::Hand
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::getOwnPropertyNames(JSContext *cx, JS::Handle<JSObject*> wrapper,
+FilteringWrapper<Base, Policy>::getOwnPropertyNames(JSContext *cx, HandleObject wrapper,
                                                     AutoIdVector &props)
 {
     assertEnteredPolicy(cx, wrapper, JSID_VOID);
@@ -102,7 +103,7 @@ FilteringWrapper<Base, Policy>::getOwnPropertyNames(JSContext *cx, JS::Handle<JS
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::enumerate(JSContext *cx, JS::Handle<JSObject*> wrapper,
+FilteringWrapper<Base, Policy>::enumerate(JSContext *cx, HandleObject wrapper,
                                           AutoIdVector &props)
 {
     assertEnteredPolicy(cx, wrapper, JSID_VOID);
@@ -112,7 +113,7 @@ FilteringWrapper<Base, Policy>::enumerate(JSContext *cx, JS::Handle<JSObject*> w
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::keys(JSContext *cx, JS::Handle<JSObject*> wrapper,
+FilteringWrapper<Base, Policy>::keys(JSContext *cx, HandleObject wrapper,
                                      AutoIdVector &props)
 {
     assertEnteredPolicy(cx, wrapper, JSID_VOID);
@@ -122,8 +123,8 @@ FilteringWrapper<Base, Policy>::keys(JSContext *cx, JS::Handle<JSObject*> wrappe
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::iterate(JSContext *cx, JS::Handle<JSObject*> wrapper,
-                                        unsigned flags, JS::MutableHandle<JS::Value> vp)
+FilteringWrapper<Base, Policy>::iterate(JSContext *cx, HandleObject wrapper,
+                                        unsigned flags, MutableHandleValue vp)
 {
     assertEnteredPolicy(cx, wrapper, JSID_VOID);
     // We refuse to trigger the iterator hook across chrome wrappers because
@@ -145,7 +146,7 @@ FilteringWrapper<Base, Policy>::nativeCall(JSContext *cx, JS::IsAcceptableThis t
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::defaultValue(JSContext *cx, JS::Handle<JSObject*> obj,
+FilteringWrapper<Base, Policy>::defaultValue(JSContext *cx, HandleObject obj,
                                              JSType hint, MutableHandleValue vp)
 {
     return Base::defaultValue(cx, obj, hint, vp);
@@ -156,7 +157,7 @@ FilteringWrapper<Base, Policy>::defaultValue(JSContext *cx, JS::Handle<JSObject*
 template<>
 bool
 FilteringWrapper<CrossCompartmentSecurityWrapper, GentlyOpaque>
-                ::defaultValue(JSContext *cx, JS::Handle<JSObject*> obj,
+                ::defaultValue(JSContext *cx, HandleObject obj,
                                JSType hint, MutableHandleValue vp)
 {
     JSString *str = JS_NewStringCopyZ(cx, "[Opaque]");
@@ -169,8 +170,8 @@ FilteringWrapper<CrossCompartmentSecurityWrapper, GentlyOpaque>
 
 template <typename Base, typename Policy>
 bool
-FilteringWrapper<Base, Policy>::enter(JSContext *cx, JS::Handle<JSObject*> wrapper,
-                                      JS::Handle<jsid> id, Wrapper::Action act, bool *bp)
+FilteringWrapper<Base, Policy>::enter(JSContext *cx, HandleObject wrapper,
+                                      HandleId id, Wrapper::Action act, bool *bp)
 {
     // This is a super ugly hacky to get around Xray Resolve wonkiness.
     //
